# controle-acesso-PAMC

./: .coverage  .env.example  .gitignore  LICENSE  README.md  atualizar_producao.bat  install.bat  install.ps1  manage.py  modelo_importacao.xlsx  ngrok_starter.py  pyproject.toml  pytest.ini  requirements.txt  run_with_ngrok.py  runserver.py  uninstall.bat  update.bat  update_app.bat  vercel.json  vercel_build_step.sh  web.config  web.config.example
.cursor/rules/: global-rules.mdc
.github/workflows/: deploy-producao.yml
controle_acesso/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  authentication.py  context_processors.py  decorators.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py  views_original.py
core/migrations/: 0001_initial.py  (+19 more)
deploy/: sites.example.json
docs/: ADMIN_MELHORIAS.md  CHANGELOG.md  CONFIGURACAO_AMBIENTE.md  DEPLOY_CI.md  GUIA_INSTALACAO_ADMIN.md  INSTALACAO_PRODUCAO.md  TUTORIAL_IIS.md  TUTORIAL_IIS_LOCALHOST_RUN.md  UPGRADE_PYTHON_DJANGO.md
logs/: .gitkeep  canaime_areas_bruto.html  canaime_areas_processado.html
scripts/: agendar_atualizacao.ps1  atualizar_site.ps1  atualizar_todos.ps1  atualizar_web_config.ps1  configurar_iis.ps1  configurar_permissoes_iis.ps1  configurar_porta_iis.ps1  configurar_update_automatico.ps1  iis_startup.py  instalar_runner_github.ps1  schedule_update.bat  start_and_tunnel.bat  start_serveo.bat  start_serveo.ps1  start_serveo.py  start_server.bat  update.bat  update.ps1  validate_changelog.py  verificar_instalacao_iis.ps1
update/: AtualizarControleAcesso.xml  update.bat
(+63 files in other folders)
